assets/css/nav.css
/* ... */
  .navbar-default .navbar-link {
    color: #777777;
  }
  .navbar-default .navbar-link:hover {
    color: #333333;
  }
  .navbar-default .btn-link {
    color: #777777;
  }
  .navbar-default .btn-link:hover,
  .navbar-default .btn-link:focus {
    color: #333333;
  }
  .navbar-default .btn-link[disabled]:hover,
  fieldset[disabled] .navbar-default .btn-link:hover,
  .navbar-default .btn-link[disabled]:focus,
  fieldset[disabled] .navbar-default .btn-link:focus {
    color: #cccccc;
  }
  .navbar-inverse {
    background-color: #222222;
    border-color: #080808;
  }
  .navbar-inverse .navbar-brand {
    color: #9d9d9d;
  }
  .navbar-inverse .navbar-brand:hover,
  .navbar-inverse .navbar-brand:focus {
    color: #ffffff;
    background-color: transparent;
  }
  .navbar-inverse .navbar-text {
    color: #9d9d9d;
  }
  .navbar-inverse .navbar-nav > li > a {
    color: #9d9d9d;
  }
  .navbar-inverse .navbar-nav > li > a:hover,
  .navbar-inverse .navbar-nav > li > a:focus {
    color: #ffffff;
    background-color: transparent;
  }
  .navbar-inverse .navbar-nav > .active > a,
  .navbar-inverse .navbar-nav > .active > a:hover,
  .navbar-inverse .navbar-nav > .active > a:focus {
    color: #ffffff;
    background-color: #080808;
  }
  .navbar-inverse .navbar-nav > .disabled > a,
  .navbar-inverse .navbar-nav > .disabled > a:hover,
  .navbar-inverse .navbar-nav > .disabled > a:focus {
    color: #444444;
    background-color: transparent;
  }
  .navbar-inverse .navbar-toggle {
    border-color: #333333;
  }
  .navbar-inverse .navbar-toggle:hover,
  .navbar-inverse .navbar-toggle:focus {
    background-color: #333333;
  }
  .navbar-inverse .navbar-toggle .icon-bar {
    background-color: #ffffff;
  }
  .navbar-inverse .navbar-collapse,
  .navbar-inverse .navbar-form {
    border-color: #101010;
  }
  .navbar-inverse .navbar-nav > .open > a,
  .navbar-inverse .navbar-nav > .open > a:hover,
  .navbar-inverse .navbar-nav > .open > a:focus {
    background-color: #080808;
    color: #ffffff;
  }
  @media (max-width: 767px) {
    .navbar-inverse .navbar-nav .open .dropdown-menu > .dropdown-header {
      border-color: #080808;
    }
    .navbar-inverse .navbar-nav .open .dropdown-menu .divider {
      background-color: #080808;
    }
    .navbar-inverse .navbar-nav .open .dropdown-menu > li > a {
      color: #9d9d9d;
    }
    .navbar-inverse .navbar-nav .open .dropdown-menu > li > a:hover,
    .navbar-inverse .navbar-nav .open .dropdown-menu > li > a:focus {
      color: #ffffff;
      background-color: transparent;
    }
    .navbar-inverse .navbar-nav .open .dropdown-menu > .active > a,
    .navbar-inverse .navbar-nav .open .dropdown-menu > .active > a:hover,
    .navbar-inverse .navbar-nav .open .dropdown-menu > .active > a:focus {
      color: #ffffff;
      background-color: #080808;
    }
    .navbar-inverse .navbar-nav .open .dropdown-menu > .disabled > a,
    .navbar-inverse .navbar-nav .open .dropdown-menu > .disabled > a:hover,
    .navbar-inverse .navbar-nav .open .dropdown-menu > .disabled > a:focus {
      color: #444444;
      background-color: transparent;
    }
  }
  .navbar-inverse .navbar-link {
    color: #9d9d9d;
  }
  .navbar-inverse .navbar-link:hover {
    color: #ffffff;
  }
  .navbar-inverse .btn-link {
    color: #9d9d9d;
  }
  .navbar-inverse .btn-link:hover,
  .navbar-inverse .btn-link:focus {
    color: #ffffff;
  }
  .navbar-inverse .btn-link[disabled]:hover,
  fieldset[disabled] .navbar-inverse .btn-link:hover,
  .navbar-inverse .btn-link[disabled]:focus,
  fieldset[disabled] .navbar-inverse .btn-link:focus {
    color: #444444;
}

nav#layout-nav {
    padding: .25em 0;
    margin-bottom: 0;
    background: rgba(255, 255, 255, 0.22);
    border-bottom: 1px solid #ffffff4f;
  }
  
  nav#layout-nav .navbar-brand {
    padding-left: 50px;
    margin-right: 20px;
    background-image: url('../images/wintercms.png');
    background-size: auto 80%;
    background-repeat: no-repeat;
    background-position: 7px 50%;
  }
  
  nav#layout-nav .navbar-toggle .icon-bar {
    background-color: #292929;
  }
  
  nav#layout-nav .navbar-nav > li > a {
    text-transform: uppercase;
    font-weight: 700;
    color: #292929;
  }
  
  #layout-subnav {
    background: rgba(41, 41, 41, 0.98);
    color: #fff;
  }
  
  #layout-subnav .nav {
    margin: 0px 0;
  }
  
  #layout-subnav .nav li a {
    border-radius: 0;
    line-height: 60px;
    padding: 0 20px;
    height: 60px;
    color: #ccc;
  }
  
  #layout-subnav .nav li a:hover,
  #layout-subnav .nav li a:focus {
    background: #0483d9;
    color: #fff;
  }
  
  #layout-subnav .nav li.active a {
    background: transparent;
    color: #fff;
  }
  
  #layout-subnav h1,
  #layout-subnav h2,
  #layout-subnav h3,
  #layout-subnav h4,
  #layout-subnav h5 {
    margin: 0;
    padding: 0;
    line-height: 60px;
}

.navbar-toggle {
  background: none;
  border: none;
  margin-top: 8px;
  position: relative;
}

.navbar-toggle .icon-bar {
  display: block;
  width: 22px;
  height: 2px;
  background-color: #333;
  margin: 4px 0;
  transition: all 0.3s;
}

.navbar-toggle:not(.collapsed) .icon-bar.middle-bar {
  opacity: 0;
}

.navbar-toggle:not(.collapsed) .icon-bar.top-bar {
  transform: translateY(6px) rotate(45deg);
}

.navbar-toggle:not(.collapsed) .icon-bar.bottom-bar {
  transform: translateY(-6px) rotate(-45deg);
}

.navbar-toggle.collapsed .icon-bar {
  transform: none;
  opacity: 1;
}

.navbar-collapse {
  transition: max-height 0.3s;
  overflow: hidden;
}

